# FileWatson-FileSearchTool

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.MD
include/: ver.hh
include/config/: config.hh
include/file_processor/: async_file_processor.hh  file_processor.hh
include/lang/: handler.hh
include/ui/: app.hh
include/ui/frame/: file_search_frame.hh
include/util/: dir_util.hh  fm_interaction.hh  pattern.hh  type_conversion.hh
resources/: res.h
resources/icon/: icon.aps  icon.icns
resources/lang/: de_de.json  en_us.json  es_es.json  fr_fr.json  it_it.json  ja_jp.json  zh_cn.json
src/: filewatson.cc
src/config/: config.cc
src/file_processor/: async_file_processor.cc  file_processor.cc
src/lang/: handler.cc
src/ui/: app.cc
src/ui/frame/: file_search_frame.cc
src/util/: dir_util.cc  fm_interaction.cc  pattern.cc  type_conversion.cc
